--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src\\assets\\CapxLogo.webp" />
+    <link rel="icon" type="image/svg+xml" href="CapxLogo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>capx_portfolio_tracker</title>
   </head>
